<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="pet"
            type="com.kev.gl.app.petsapp.data.model.Pet" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/cl_item_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:transitionName="@{ @string/item_pet_shared_name(pet.id) }">

            <ImageView
                android:id="@+id/imv_pet"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/item_pet_description"
                android:scaleType="centerCrop"
                app:imageUrl="@{pet.petImage}"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/txv_breed_name"
                style="@style/TextAppearance.MaterialComponents.Overline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:singleLine="true"
                android:text="@{pet.breed}"
                android:textColor="@android:color/black"
                tools:text="@tools:sample/lorem" />

            <TextView
                android:id="@+id/txv_name"
                style="@style/TextAppearance.MaterialComponents.Headline4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:singleLine="true"
                android:text="@{pet.name}"
                android:textColor="@android:color/black"
                tools:text="@tools:sample/lorem" />

            <TextView
                android:id="@+id/txv_color_title"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:singleLine="true"
                android:text="@string/details_color_title"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/txv_color"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:singleLine="true"
                android:text="@{pet.color}"
                android:textColor="@color/colorGray"
                tools:text="@tools:sample/lorem" />

            <TextView
                android:id="@+id/txv_desciption_title"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:singleLine="true"
                android:text="@string/details_description_title"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/txv_description"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@{pet.description}"
                android:textColor="@color/colorGray"
                tools:text="@tools:sample/lorem[25]" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</layout>